add splash activity

--- a/app/src/main/res/layout/activity_front.xml
+++ b/app/src/main/res/layout/activity_front.xml
@@ -2,12 +2,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context="com.example.tranthy.project.FrontActivity">
 
-    <ImageView
-        android:src="@drawable/splash"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:scaleType="fitXY"/>
+    <TextView
+        android:text="@string/Default_msg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
