--- a/app/src/main/res/layout/activity_front.xml
+++ b/app/src/main/res/layout/activity_front.xml
@@ -14,7 +14,7 @@ android:layout_height="match_parent">
     android:layout_height="match_parent"
     android:layout_gravity="start"
     android:choiceMode="singleChoice"
-    android:divider="@android:color/transparent"
-    android:dividerHeight="0dp"
-    android:background="#111"/>
+    android:divider="@android:color/holo_blue_dark"
+    android:dividerHeight="1dp"
+    android:background="#D4FFC3"/>
 </android.support.v4.widget.DrawerLayout>
