--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,96 @@
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context=".MainActivity">
+<ImageView
+    android:src="@drawable/splash"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:scaleType="fitXY"/>
+<LinearLayout android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/linearLayout1"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentRight="true">
+    <Button
+        android:id="@+id/btn_goToContactSetting"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight=".5"
+        android:drawableLeft="@drawable/ic_action_add_group"
+        android:textSize="12dp"
+        android:gravity="center_vertical|right"
+        android:text="@string/contact_setting"
+        android:onClick="goToContactSetting"/>
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight=".5"
+        android:drawableLeft="@drawable/ic_action_place"
+        android:textSize="12dp"
+        android:gravity="center_vertical|right"
+        android:text="@string/check_location"/>
+</LinearLayout>
+<LinearLayout
+    android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="wrap_content"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentRight="true"
+    android:layout_below="@+id/linearLayout1">
 
-    <ImageView
-        android:src="@drawable/splash"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:scaleType="fitXY"/>
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight=".5"
+        android:drawableLeft="@drawable/ic_action_new"
+        android:textSize="12dp"
+        android:gravity="center_vertical|right"
+        android:text="@string/create_account"/>
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight=".5"
+        android:drawableLeft="@drawable/ic_action_settings"
+        android:textSize="12dp"
+        android:gravity="center_vertical|right"
+        android:text="@string/language_setting"/>
 
+</LinearLayout>
+
+<LinearLayout
+    android:id="@+id/linearLayout3"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentRight="true"
+    android:layout_below="@+id/linearLayout2">
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight=".5"
+        android:drawableLeft="@drawable/ic_action_phone"
+        android:textSize="12dp"
+        android:gravity="center_vertical|right"
+        android:text="@string/message_setting"/>
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight=".5"
+        android:gravity="center_vertical|right"
+        android:drawableLeft="@drawable/ic_action_add_alarm"
+        android:textSize="12dp"
+        android:text="@string/alert_setting"/>
+
+</LinearLayout>
 </RelativeLayout>
+
+
