--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,12 +3,9 @@
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
+android:background="@drawable/splash"
 tools:context=".MainActivity">
-<ImageView
-    android:src="@drawable/splash"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:scaleType="fitXY"/>
+
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/linearLayout1"
@@ -32,6 +29,7 @@ tools:context=".MainActivity">
         android:drawableLeft="@drawable/ic_action_place"
         android:textSize="12dp"
         android:gravity="center_vertical|right"
+
         android:text="@string/check_location"/>
 </LinearLayout>
 <LinearLayout
@@ -50,6 +48,7 @@ tools:context=".MainActivity">
         android:drawableLeft="@drawable/ic_action_new"
         android:textSize="12dp"
         android:gravity="center_vertical|right"
+
         android:text="@string/create_account"/>
     <Button
         android:id="@+id/button4"
@@ -59,6 +58,7 @@ tools:context=".MainActivity">
         android:drawableLeft="@drawable/ic_action_settings"
         android:textSize="12dp"
         android:gravity="center_vertical|right"
+
         android:text="@string/language_setting"/>
 
 </LinearLayout>
@@ -79,6 +79,7 @@ tools:context=".MainActivity">
         android:drawableLeft="@drawable/ic_action_phone"
         android:textSize="12dp"
         android:gravity="center_vertical|right"
+
         android:text="@string/message_setting"/>
     <Button
         android:id="@+id/button6"
@@ -88,6 +89,7 @@ tools:context=".MainActivity">
         android:gravity="center_vertical|right"
         android:drawableLeft="@drawable/ic_action_add_alarm"
         android:textSize="12dp"
+
         android:text="@string/alert_setting"/>
 
 </LinearLayout>
