--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,14 +22,14 @@ tools:context=".MainActivity">
         android:text="@string/contact_setting"
         android:onClick="goToContactSetting"/>
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btn_goToMyLocation"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight=".5"
         android:drawableLeft="@drawable/ic_action_place"
         android:textSize="12dp"
         android:gravity="center_vertical|right"
-
+        android:onClick="goToMyLocation"
         android:text="@string/check_location"/>
 </LinearLayout>
 <LinearLayout
@@ -41,24 +41,24 @@ tools:context=".MainActivity">
     android:layout_below="@+id/linearLayout1">
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btn_goToCreateAccount"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight=".5"
         android:drawableLeft="@drawable/ic_action_new"
         android:textSize="12dp"
         android:gravity="center_vertical|right"
-
+        android:onClick="goToCreateAccount"
         android:text="@string/create_account"/>
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btn_goToLanguageSetting"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight=".5"
         android:drawableLeft="@drawable/ic_action_settings"
         android:textSize="12dp"
         android:gravity="center_vertical|right"
-
+        android:onClick="goToLanguageSetting"
         android:text="@string/language_setting"/>
 
 </LinearLayout>
@@ -72,24 +72,24 @@ tools:context=".MainActivity">
     android:layout_below="@+id/linearLayout2">
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btn_goToMessageSetting"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight=".5"
         android:drawableLeft="@drawable/ic_action_phone"
         android:textSize="12dp"
         android:gravity="center_vertical|right"
-
+        android:onClick="goToMessageSetting"
         android:text="@string/message_setting"/>
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/btn_goToAlertSetting"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight=".5"
         android:gravity="center_vertical|right"
         android:drawableLeft="@drawable/ic_action_add_alarm"
         android:textSize="12dp"
-
+        android:onClick="goToAlertSetting"
         android:text="@string/alert_setting"/>
 
 </LinearLayout>
