--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,15 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:background="@drawable/splash"
+android:paddingBottom="@dimen/activity_vertical_margin"
 tools:context=".MainActivity">
 
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/linearLayout1"
     android:layout_alignParentLeft="true"
-    android:layout_alignParentRight="true">
+    android:layout_alignParentRight="true"
+    android:paddingTop="@dimen/activity_vertical_margin">
     <Button
         android:id="@+id/btn_goToContactSetting"
         android:layout_width="0dp"
