--- a/app/src/main/res/layout/contact_setting.xml
+++ b/app/src/main/res/layout/contact_setting.xml
@@ -7,6 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:paddingTop="@dimen/activity_vertical_margin"
         android:layout_alignParentTop="true">
     <TextView
         android:id="@+id/textView1"
@@ -23,13 +24,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:paddingTop="@dimen/activity_vertical_margin"
         android:layout_below="@+id/linearLayoutContact1">
         <Button
             android:id="@+id/btn_AddManually"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".5"
-            android:text="@string/add_manually"/>
+            android:text="@string/add_manually"
+            android:onClick="showAddManuallyDialog"/>
         <Button
             android:id="@+id/btn_FromContact"
             android:layout_width="0dp"
