Create class for contact list to save manually first

--- a/app/src/main/res/layout/add_contact_manually_dialog.xml
+++ b/app/src/main/res/layout/add_contact_manually_dialog.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+ <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -10,16 +10,45 @@
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"/>
-    <EditText
-        android:id="@+id/txt_contact_name"
+
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:imeOptions="actionDone"/>
+        android:layout_height="match_parent">
+        <TableRow>
+            <TextView
+                android:text="Name:"
+                android:width="120dp"/>
+            <EditText
+                android:id="@+id/txt_contact_name"
+                android:width="200dp"
+                android:inputType="text"
+                 android:imeOptions="actionNext"/><!--This is to next field when type enter-->
+        </TableRow>
+        <TableRow>
+           <TextView
+               android:text="Number"
+               android:width="120dp"/>
+            <EditText
+                android:id="@+id/txt_phone_number"
+                android:width="200dp"
+                android:inputType="phone"
+                android:imeOptions="actionNext"/>
+        </TableRow>
+        <TableRow>
+            <TextView
+                android:text="Email"
+                android:width="120dp"/>
+            <EditText
+                android:id="@+id/txt_contact_email"
+                android:width="200dp"
+                android:inputType="textEmailAddress"
+                android:imeOptions="actionDone"/>
+        </TableRow>
+
+
     <Button
         android:id="@+id/btn_Done"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Done"/>
 
-</LinearLayout>
+</TableLayout>
