--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,15 +53,15 @@ tools:context=".MainActivity">
         android:onClick="goToCreateAccount"
         android:text="@string/create_account"/>
     <Button
-        android:id="@+id/btn_goToLanguageSetting"
+        android:id="@+id/btn_goToMessageHistory"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight=".5"
         android:drawableLeft="@drawable/ic_action_settings"
         android:textSize="12dp"
         android:gravity="center_vertical|right"
-        android:onClick="goToLanguageSetting"
-        android:text="@string/language_setting"/>
+        android:onClick="goToMessageHistory"
+        android:text="@string/message_history"/>
 
 </LinearLayout>
 
@@ -95,6 +95,7 @@ tools:context=".MainActivity">
         android:text="@string/alert_setting"/>
 
 </LinearLayout>
+
 </RelativeLayout>
 
 
