--- a/app/src/main/res/layout/contact_setting.xml
+++ b/app/src/main/res/layout/contact_setting.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/splash">
+
+    <RelativeLayout
+        android:id="@+id/mainContact"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
     <LinearLayout
         android:id="@+id/linearLayoutContact1"
         android:layout_width="match_parent"
@@ -39,7 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_weight=".5"
             android:text="@string/from_contact"
-            android:onClick="showListSize"/>
+            android:onClick="showSubContact"/>
         </LinearLayout>
     <TableLayout
         android:layout_width="match_parent"
@@ -72,5 +79,50 @@
 
         </TableRow>
         </TableLayout>
+    </RelativeLayout>
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/subContact"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
+
+
+
+        <LinearLayout
+            android:id="@+id/subButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:paddingTop="@dimen/activity_vertical_margin">
+
+        <Button
+            android:id="@+id/addSelected"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".5"
+            android:text="@string/add_selected"
+            android:onClick="Add Contact"/>
+        <Button
+            android:id="@+id/backMain"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".5"
+            android:text="@string/backToMain"
+            android:onClick="showMainContact"/>
+        </LinearLayout>
+
+        <ListView
+            android:id="@+id/contactslist"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_below="@id/subButton">
+        </ListView>
+
+
+    </RelativeLayout>
+
 
 </RelativeLayout>
+
+
