location layout and java class changed

--- a/app/src/main/res/layout/contact_setting.xml
+++ b/app/src/main/res/layout/contact_setting.xml
@@ -107,7 +107,8 @@
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_below="@id/subButton"
-
+            android:divider="@android:color/black"
+            android:dividerHeight="2dp"
             >
         </ListView>
 
