--- a/app/src/main/res/layout/my_location.xml
+++ b/app/src/main/res/layout/my_location.xml
@@ -80,6 +80,7 @@
     </LinearLayout>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:paddingBottom="@dimen/activity_vertical_margin"
         android:id="@+id/location_layout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -89,15 +90,49 @@
 
         <Button
             android:id="@+id/getButton"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/getMyLocation"
             android:onClick="getCurrentLocation"/>
+        <View
 
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/black" />
     </LinearLayout>
 
 
+    <LinearLayout
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:id="@+id/location_layout4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_below="@+id/location_layout3">
+        <TextView
+            android:id="@+id/address_result_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/result_title"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            />
+        <ListView
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:id="@+id/address_result"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/address_result_title">
 
+            </ListView>
+
+    </LinearLayout>
 
 
 
