--- a/app/src/main/res/layout/message_history.xml
+++ b/app/src/main/res/layout/message_history.xml
@@ -1,6 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/table"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-</LinearLayout>
+    android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:shrinkColumns="*"
+    android:stretchColumns="*" >
+    <TableRow
+        android:id="@+id/tableRow1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+    </TableRow>
+    <TableRow
+        android:id="@+id/tableRow2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="20dp" >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_span="6"
+            android:gravity="center"
+            android:text="@string/msgHistory"
+            android:textSize="28sp"
+            android:textStyle="bold" >
+        </TextView>
+    </TableRow>
+    <TableRow
+        android:id="@+id/tableRow3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+        <TextView
+            android:layout_width="0dp"
+            android:gravity="center"
+            android:layout_weight="0.1"
+            android:text="@string/msgID"
+            android:textStyle="bold"
+            android:typeface="serif"
+            android:visibility="gone">
+        </TextView>
+        <TextView
+            android:gravity="center"
+            android:text="@string/receiver"
+            android:layout_width="0dp"
+            android:layout_weight="0.2"
+            android:textStyle="bold"
+            android:typeface="serif" >
+        </TextView>
+        <TextView
+            android:gravity="center"
+            android:text="@string/message"
+            android:layout_width="0dp"
+            android:layout_weight="0.5"
+            android:textStyle="bold"
+            android:typeface="serif" >
+        </TextView>
+        <TextView
+            android:gravity="center"
+            android:text="@string/time"
+            android:layout_width="0dp"
+            android:layout_weight="0.2"
+            android:textStyle="bold"
+            android:typeface="serif" >
+        </TextView>
+    </TableRow>
+</TableLayout>
