--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,29 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:background="@drawable/splash"
-android:paddingBottom="@dimen/activity_vertical_margin"
-tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".MyActivity"
+    android:background="@drawable/background4">
+
 
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/linearLayout1"
     android:layout_alignParentLeft="true"
     android:layout_alignParentRight="true"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingTop="30dp">
     <Button
         android:id="@+id/btn_goToContactSetting"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight=".5"
-        android:drawableLeft="@drawable/ic_action_add_group"
-        android:textSize="12dp"
-        android:gravity="center_vertical|right"
+        android:drawableTop="@drawable/ic_action_add_group"
+        android:gravity="center_vertical|center"
         android:text="@string/contact_setting"
         android:onClick="goToContactSetting"/>
     <Button
@@ -28,9 +31,8 @@ tools:context=".MainActivity">
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight=".5"
-        android:drawableLeft="@drawable/ic_action_place"
-        android:textSize="12dp"
-        android:gravity="center_vertical|right"
+        android:drawableTop="@drawable/ic_action_place"
+        android:gravity="center_vertical|center"
         android:onClick="goToMyLocation"
         android:text="@string/check_location"/>
 </LinearLayout>
@@ -47,9 +49,8 @@ tools:context=".MainActivity">
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight=".5"
-        android:drawableLeft="@drawable/ic_action_new"
-        android:textSize="12dp"
-        android:gravity="center_vertical|right"
+        android:drawableTop="@drawable/ic_action_new"
+        android:gravity="center_vertical|center"
         android:onClick="goToAlarmSound"
         android:text="@string/alarm_sound"/>
     <Button
@@ -57,9 +58,8 @@ tools:context=".MainActivity">
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight=".5"
-        android:drawableLeft="@drawable/ic_action_settings"
-        android:textSize="12dp"
-        android:gravity="center_vertical|right"
+        android:drawableTop="@drawable/ic_action_settings"
+        android:gravity="center_vertical|center"
         android:onClick="goToMessageHistory"
         android:text="@string/message_history"/>
 
@@ -78,9 +78,8 @@ tools:context=".MainActivity">
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight=".5"
-        android:drawableLeft="@drawable/ic_action_phone"
-        android:textSize="12dp"
-        android:gravity="center_vertical|right"
+        android:drawableTop="@drawable/ic_action_phone"
+       android:gravity="center_vertical|center"
         android:onClick="goToMessageSetting"
         android:text="@string/message_setting"/>
     <Button
@@ -88,9 +87,8 @@ tools:context=".MainActivity">
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight=".5"
-        android:gravity="center_vertical|right"
-        android:drawableLeft="@drawable/ic_action_add_alarm"
-        android:textSize="12dp"
+        android:gravity="center_vertical|center"
+        android:drawableTop="@drawable/ic_action_add_alarm"
         android:onClick="goToAlertSetting"
         android:text="@string/alert_setting"/>
 
@@ -106,11 +104,12 @@ tools:context=".MainActivity">
    <Button
        android:id="@+id/btn_goToDanger"
        android:layout_width="match_parent"
-       android:layout_height="wrap_content"
+       android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/danger"
+
        android:onClick="goToDangerAlarm"
-       android:background="@color/common_signin_btn_default_background">
+       android:background="@drawable/background3">
 
        </Button>
 
