--- a/app/src/main/res/layout/contact_setting.xml
+++ b/app/src/main/res/layout/contact_setting.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ScrollView01"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/background4"
+    >
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background4">
+   >
 
     <RelativeLayout
         android:id="@+id/mainContact"
@@ -119,4 +125,4 @@
 
 </RelativeLayout>
 
-
+</ScrollView>
