alarm manager, broadcast receiver and intent service implemented but the once the app is destroyed everything stop

--- a/app/src/main/res/layout/alert_setting.xml
+++ b/app/src/main/res/layout/alert_setting.xml
@@ -15,13 +15,13 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Start Alarm"
-        android:onClick="startAlarm" />
+        android:onClick="startAlert" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Cancel Alarm"
-        android:onClick="cancelAlarm" />
+        android:onClick="cancelAlert" />
 
 </LinearLayout>
