able to send sms according to the number in contact list msg is also recorded in the history database going to implement a clear all history button instead of selective deletion

--- a/app/src/main/res/layout/alert_setting.xml
+++ b/app/src/main/res/layout/alert_setting.xml
@@ -14,14 +14,14 @@
         android:id="@+id/button1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Start Alarm"
+        android:text="Start Alert"
         android:onClick="startAlert" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Cancel Alarm"
+        android:text="Cancel Alert"
         android:onClick="cancelAlert" />
 
 </LinearLayout>
