--- a/app/src/main/res/layout/contact_setting.xml
+++ b/app/src/main/res/layout/contact_setting.xml
@@ -3,6 +3,7 @@
     android:id="@+id/ScrollView01"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:fillViewport="true"
     android:background="@drawable/background4"
     >
 <RelativeLayout
