--- a/app/src/main/res/layout/message_history.xml
+++ b/app/src/main/res/layout/message_history.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
-
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/MessageHistory">
 <TableLayout
     android:id="@+id/table"
     android:layout_width="match_parent"
