--- a/app/src/main/res/layout/alert_setting.xml
+++ b/app/src/main/res/layout/alert_setting.xml
@@ -10,18 +10,97 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="fill_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start Alert"
-        android:onClick="startAlert" />
+        android:text="@string/alertTitle"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:layout_gravity="center"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@android:color/transparent" />
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/black" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@android:color/transparent" />
+
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Set Interval (min) :"
+            android:layout_weight=".4"
+            android:textSize="18dp"
+            android:layout_gravity="center"/>
+        <Spinner
+            android:id="@+id/interval_spinner"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".5"/>
+
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_gravity="center"
+        >
+    <Button
+        android:id="@+id/activation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Activate"
+        android:onClick="activateAlert"
+        android:layout_weight=".5"
+        android:layout_gravity="center"
+        />
 
     <Button
-        android:id="@+id/button2"
-        android:layout_width="fill_parent"
+        android:id="@+id/deactivation"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cancel Alert"
-        android:onClick="cancelAlert" />
+        android:text="Deactivate"
+        android:layout_weight=".4"
+        android:onClick="deactivateAlert"
+        android:layout_gravity="center"/>
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@android:color/transparent" />
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/black" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@android:color/transparent" />
+
+    <TextView
+        android:id="@+id/alertStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight=".4"
+        android:textSize="20dp"
+        android:layout_gravity="center"/>
+
 
 </LinearLayout>
