--- a/app/src/main/res/layout/alert_setting.xml
+++ b/app/src/main/res/layout/alert_setting.xml
@@ -94,12 +94,22 @@
         android:layout_height="10dp"
         android:background="@android:color/transparent" />
 
+
+    <ImageView
+        android:id="@+id/status_image"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+    />
+
     <TextView
         android:id="@+id/alertStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight=".4"
         android:textSize="20dp"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/status_image"
         android:layout_gravity="center"/>
 
 
