--- a/app/src/main/res/layout/alert_setting.xml
+++ b/app/src/main/res/layout/alert_setting.xml
@@ -112,5 +112,13 @@
         android:layout_toRightOf="@+id/status_image"
         android:layout_gravity="center"/>
 
+    <Button
+        android:id="@+id/test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Session"
+        android:onClick="testSession"
+        android:layout_gravity="center"/>
+
 
 </LinearLayout>
